--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "source.fixAll": true
     },
     "eslint.validate": ["javascript"],
-    "eslint.lintTask.enable": true
+    "eslint.lintTask.enable": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
