--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "nodejs-express-project-template",
+  "name": "bookmark-manager",
   "version": "1.0.0",
-  "description": "NodeJS with Express template",
+  "description": "A better bookmark manager",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon -r dotenv/config src/server.js",
     "lint": "eslint . --ext js",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "prepare": "husky install"
   },
   "author": "Vipin Chacko",
@@ -29,6 +29,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
   }
 }
