--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A better bookmark manager",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node src/server.js --unhandled-rejections=strict",
     "dev": "nodemon -r dotenv/config src/server.js",
     "lint": "eslint . --ext js",
     "lint:fix": "npm run lint -- --fix",
