--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [master]
 
+env:
+  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+
 jobs:
   lint-and-test:
     name: Lint and Test
@@ -31,14 +35,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Login to container registry
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:login
+        run: HEROKU_API_KEY=${{ env.HEROKU_API_KEY }} heroku container:login
       - name: Build and push
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+        run: HEROKU_API_KEY=${{ env.HEROKU_API_KEY }} heroku container:push -a ${{ env.HEROKU_APP_NAME }} web
       - name: Release
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+        run: HEROKU_API_KEY=${{ env.HEROKU_API_KEY }} heroku container:release -a ${{ env.HEROKU_APP_NAME }} web
