--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "pino-http": "^5.6.0",
+    "pino-pretty": "^5.1.2"
   },
   "devDependencies": {
     "dotenv": "^9.0.2",
