--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.2",
     "mongoose": "^5.13.2",
     "pino-http": "^5.6.0",
     "pino-pretty": "^5.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "babel-jest": "^27.2.5",
+    "babel-plugin-jest-hoist": "^27.2.0",
     "dotenv": "^9.0.2",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
